# edi-framework

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt  test-requirements.txt
edi_account_core_oca/: __manifest__.py
edi_account_oca/: __manifest__.py
edi_component_oca/: README.rst  __manifest__.py
edi_core_oca/: README.rst  __manifest__.py
edi_endpoint_oca/: README.rst  __manifest__.py
edi_exchange_deduplicate_oca/: README.rst  __manifest__.py
edi_exchange_template_oca/: README.rst  __manifest__.py
edi_exchange_template_party_data/: README.rst  __manifest__.py
edi_notification_oca/: README.rst  __manifest__.py
edi_oca/: README.rst  __manifest__.py
edi_party_data_oca/: README.rst  __manifest__.py
edi_product_oca/: README.rst  __manifest__.py
edi_purchase_base/: __manifest__.py
edi_purchase_config/: README.rst  __manifest__.py
edi_purchase_diapar/: __manifest__.py
edi_purchase_diapar_oca/: __init__.py  __manifest__.py
edi_purchase_edifact_oca/: README.rst  __manifest__.py
edi_purchase_oca/: README.rst  __manifest__.py
edi_purchase_ubl_output_oca/: __manifest__.py
edi_queue_oca/: README.rst  __manifest__.py
edi_record_metadata_oca/: README.rst  __manifest__.py
edi_sale_endpoint/: README.rst  __manifest__.py
edi_sale_input_oca/: README.rst  __manifest__.py
edi_sale_oca/: README.rst  __manifest__.py
edi_sale_stock_oca/: README.rst
edi_sale_ubl_oca/: README.rst  __manifest__.py
edi_sale_ubl_output_oca/: README.rst  __manifest__.py
edi_state_oca/: README.rst  __manifest__.py
edi_stock_oca/: README.rst  __manifest__.py
edi_storage_oca/: README.rst  __manifest__.py  utils.py
edi_storage_queue_oca/: README.rst  __manifest__.py
edi_ubl_oca/: README.rst  __manifest__.py
edi_webservice_oca/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
(+285 files in other folders)
