[project]
name = "odoo-addons-oca-edi-framework"
version = "18.0.20250612.1"
dependencies = [
    "odoo-addon-edi_account_oca==18.0.*",
    "odoo-addon-edi_endpoint_oca==18.0.*",
    "odoo-addon-edi_exchange_template_oca==18.0.*",
    "odoo-addon-edi_oca==18.0.*",
    "odoo-addon-edi_record_metadata_oca==18.0.*",
    "odoo-addon-edi_state_oca==18.0.*",
    "odoo-addon-edi_webservice_oca==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
